Fix website linke

--- a/CV.tex
+++ b/CV.tex
@@ -28,7 +28,7 @@
 \newcommand{\CVAuthor}{Yehowshua Immanuel}
 \newcommand{\CVTitle}{Yehowshua Immanuel}
 \newcommand{\CVNote}{CV compiled on {\today} for Acme Corporation}
-\newcommand{\CVWebpage}{https://yehowshuaimmanuel.com/about}
+\newcommand{\CVWebpage}{https://yehowshuaimmanuel.com/about/}
 
 % PDF settings and properties.
 \hypersetup{
