--- a/CV.tex
+++ b/CV.tex
@@ -102,10 +102,12 @@ Compilers, ISA Design, Hardware and Verification Language Tooling, Mathematics a
 {\textbf{Georgia Institute of Technology | Atlanta, GA}}
 \hfill
 \DatestampYMD{2019}{01}{07} --
-Present
+\DatestampYMD{2020}{12}{16} 
 
 \BulletItem
 Masters in Computer Engineering
+\hfill
+GPA: 3.62 / 4.0
 
 \BigGap
 \Entry
@@ -262,48 +264,6 @@ Designed a printed circuit power board for an airborne radar.
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %% PROJECTS %%
 %%%%%%%%%%%%%%%%%%%%%%%%%
-
-\Section
-{Projects}
-{Projects}
-{PDF:Projects}
-
-\Entry
-\href{https://github.com/ghdl/ghdl}
-{\textbf{GHDL Maintainer}}
-\hfill
-\DatestampYMD{2020}{01} --
-Present
-\begin{Detail}
-\BulletItem
-One of the maintainers of the Free and Open Source(FOSS) VHDL simulator GHDL.
-\end{Detail}
-\Gap
-
-\Entry
-\href{https://libre-riscv.org}
-{\textbf{LibreSOC Engineer}},
-\hfill
-\DatestampYMD{2019}{12} --
-Present
-\begin{Detail}
-\BulletItem
-I am a member of the LibreSOC organization currently funded by NLNet to create an
- open source RISCV capable complete SOC with a GPU that is open source to the bedrock.
-\end{Detail}
-\Gap
-
-\Entry
-\href{https://github.com/m-labs/nmigen}
-{\textbf{nMigen Verilator Backend}},
-\hfill
-\DatestampYMD{2019}{12} --
-Present
-\begin{Detail}
-\BulletItem
-Currently adding Verilator simulator backend support to the nMigen Python HDL.
-\end{Detail}
-\Gap
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %% LEADERSHIP %%
